--- a/src/webparts/glosario/components/Glosario.module.scss
+++ b/src/webparts/glosario/components/Glosario.module.scss
@@ -1,34 +1,41 @@
-@import '~@fluentui/react/dist/sass/References.scss';
-
 .glosario {
-  overflow: hidden;
-  padding: 1em;
-  color: "[theme:bodyText, default: #323130]";
-  color: var(--bodyText);
-  &.teams {
-    font-family: $ms-font-family-fallbacks;
+  input {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
   }
-}
 
-.welcome {
-  text-align: center;
-}
+  .abecedario {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 4px;
+    margin-bottom: 10px;
 
-.welcomeImage {
-  width: 100%;
-  max-width: 420px;
-}
-
-.links {
-  a {
-    text-decoration: none;
-    color: "[theme:link, default:#03787c]";
-    color: var(--link); // note: CSS Custom Properties support is limited to modern browsers only
-
-    &:hover {
-      text-decoration: underline;
-      color: "[theme:linkHovered, default: #014446]";
-      color: var(--linkHovered); // note: CSS Custom Properties support is limited to modern browsers only
+    button {
+      border: none;
+      background: #eee;
+      padding: 5px 8px;
+      cursor: pointer;
     }
+
+    .selected {
+      background: #0078d4;
+      color: white;
+    }
+  }
+
+  ul {
+    list-style: none;
+    padding: 0;
+  }
+
+  li {
+    margin-bottom: 10px;
+  }
+
+  .paginacion {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
   }
 }
